fix an error trying to check if a string was blank by using .isBlank direct on a string